# godot-iroh

./: Cargo.toml  LICENSE  README.md
.cargo/: config.toml
.github/workflows/: build.yml  main.yml
addons/godot_iroh/: godot_iroh.gdextension
examples/: README.md
examples/chat_app/: chat_menu.gd  chat_menu.gd.uid  connection_menu.gd  connection_menu.gd.uid  icon.svg.import  main.tscn  message.gd  message.gd.uid  message.tscn  project.godot
src/: client.rs  connection.rs  lib.rs  server.rs
